update php-donate for duck

--- a/app/views/checkout.html
+++ b/app/views/checkout.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Page de donnation pour les canards de debug" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../public/css/checkout.css" />
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="../public/js/checkout.js" defer></script>
   </head>
   <body>
